lld/test/core/error-fixup-attribute.objtxt
# RUN: not lld -core %s 2> %t.err
# RUN: FileCheck %s < %t.err

#
# Test that unknown fixup attribute produces a readable error.
#

---
defined-atoms:
    - name:          entry
      scope:         hidden
      references:
      - offset:      3
        kind:        pcrel32
        weasel:      bar
        addend:      100

...


# CHECK:       error: unknown key 'weasel'
